harness/test/errors/x018_missing_comma.eu
seq(x, y): "{x} then {y}"
x: seq("a" "b")
